# nomad

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .test_durations  =  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.parsers.md  auto_complete_install.sh  backend.Dockerfile  build.sh  codemeta.json  default_plugins.txt  dependencies-git.sh  dependencies.sh  frontend.Dockerfile  generate_docs_artifacts.sh  generate_gui_artifacts.sh  gitinfo.sh  lazy_import.py  linting.sh  mkdocs.yml  mypy.ini  nomad-dev.yaml  nomad-ems.yaml  nomad.yaml  paper.bib  paper.md  pycodestyle.ini  pylint_mongoengine.py  pyproject.toml  pytest.ini  (+21 more)
.github/workflows/: push-branch-to-gitlab.yaml  push-pr-to-gitlab.yaml
docs/: .gitignore  Makefile  aitoolkit.md  api.md  api.rst  api_reference.rst  api_tutorial.md  archive.md  archive.rst  archive_query.md  archive_tutorial.md  async_archive.md  cli.rst  cli_ref.rst  cli_use_cases.rst  components.graffle  conf.py  config.md  contributing.md  copyright-notice.tmpl  depl_docker.rst  depl_helm.rst  depl_images.rst  dev_guidelines.rst  developers.md  docutils_react_docgen.py  emails.txt  glossary.md  gui.rst  index.md  index.rst  introduction.md  introduction.rst  javascript.js  local_parsers.md  make.bat  metainfo.md  metainfo.rst  modules.md  normalizers.md  (+19 more)
docs/apis/: api.md  archive_query.md  local_parsers.md  pythonlib.md
docs/asserts/: modules_and_dependencies.afdesign
docs/assets/: .gitignore  joss_paper.bib
docs/client/: cli_ref.rst  cli_use_cases.rst  client.rst  install.rst  parsers.rst
docs/components.graffle/: data.plist
docs/data/: eln.md  explore.md  upload.md
docs/dev/: dev_guidelines.rst  normalizer.rst  parser_tutorial.md  setup.md
docs/develop/: code.md  contrib.md  gitlab.md  guides.md  normalizers.md  parser.md  parsers.md  search.md  setup.md
docs/examples/: overview.md
docs/explanation/: architecture.md  basics.md  data.md  oasis.md  plugin_system.md  processing.md
docs/gui/: archive.md  explore.md  upload.md
docs/howto/: overview.md
docs/learn/: data.md  how_nomad_works.md  schemas.md
docs/oasis/: admin.md  apps.md  customize.md  install.md  migrate.md
docs/ops/: depl_docker.rst  depl_helm.rst  depl_images.rst  oasis.rst  ops.rst
docs/plugins/: normalizers.md  parsers.md  plugins.md  schemas.md
docs/reference/: annotations.md  cli.md  code_guidelines.md  config.md  glossary.md  parsers.md  plugins.md  tutorials.md
docs/schema/: basics.md  elns.md  introduction.md  python.md  suggestions.yaml  workflows.md
docs/schemas/: base_sections.md  basics.md  elns.md  hdf5.md  tabular.md  workflows.md
docs/stylesheets/: extra.css
docs/tutorial/: access_api.md  builtin.md  custom.md  develop_plugin.md  explore.md  nomad_repo.md  plugins.md  third_party.md  upload_publish.md
examples/: access_metainfo.py  api_use.py  api_use_authenticated.py  client.ipynb  client.py  domain.py  dos_analyzer.ipynb  elastic.py  externalproject.py  files.py  h2o.outmol  log.py  materialsproject.py  metainfo.ipynb  parse.py  search.py  statistics.py  test.py
examples/api/: api_entry_archive_with_requests.py  api_entry_metadata_with_requests.py  api_with_swagger_authenticated.py  authenticated.py  getting_started.py  to_ase.py
examples/data/cow_tutorial/nomad-countries/: pyproject.toml
examples/data/cow_tutorial/nomad-countries/src/nomad_countries/apps/: __init__.py
examples/data/cow_tutorial/nomad-countries/src/nomad_countries/parsers/: __init__.py  country.py
examples/data/cow_tutorial/nomad-countries/src/nomad_countries/schema_packages/: __init__.py  country.py
gui/: .dockerignore  .env.development  .env.production  .eslintrc.js  .gitignore  Dockerfile  babel.config.json  craco.config.js  generateBuildVersion.js  gitinfo.sh  globalSetup.js  gui.conf  nginx.conf  package.json  run.sh  version.sh  workbox.config.js
infrastructure/: docker-compose.yml  up-wo-elk.sh  utils.http
integration/: build_coe_container.sh  test_integration.sh
nomad/: __init__.py  aflow_prototypes.py  api.py  archive.py  archive_query.py  atomutils.py  bundles.py  client.py  coe_repo.py  common.py  config.py  constants.py  data.py  datamodel.py  dependencies.py  doi.py  empty_repository_db.sql  files.py  gitinfo.py  groups.py  handle.py  infrastructure.py  jupyterhub_config.py  logtransfer.py  metainfo_ext.py  migration.py  mkdocs.py  normalizing.py  parsers.py  parsing.py  patch.py  proc.py  processing.py  quantum_states.py  repo.py  search.py  statistics_logger.py  tmp.py  units.py  uploads.py  (+3 more)
ops/: README.md  clean_container_registry.py  elasticsearch_settings.http  elk_objects.ndjson  gunicorn.log.conf  migration_env.sh  prm.py  remove_migration_db_content.sql  utils.http
repository/: api_endpoints  repo_postgres_schema  repository_es_example.js  utils.http
scripts/: build_sdist.sh  check_elastic.sh  check_gui_artifacts.sh  check_helm_chart.sh  check_python_dependencies.sh  cleanup_packages.py  generate_all_artifacts.sh  generate_docs_artifacts.sh  generate_example_uploads.sh  generate_gui_artifacts.sh  generate_gui_config.sh  generate_gui_test_artifacts.sh  generate_python_dependencies.sh  install_auto_completion.sh  install_default_plugins.sh  run-hub.sh  run-worker.sh  run.sh  run_dev_env.py  setup_dev_env.sh  stats.sh  update_helm_chart.sh
tests/: __init__.py  bravado_flaks.py  bravado_flask.py  brenchmark_files.py  config.py  conftest.py  misc.http  parser_measurement.py  profile_vasp.py  test_api.py  test_archive.py  test_archive_library.py  test_archive_query.py  test_atomutils.py  test_cli.py  test_client.py  test_coe_repo.py  test_config.py  test_data.py  test_datamodel.py  test_dependencies.py  test_doi.py  test_files.py  test_infrastructure.py  test_logtransfer.py  test_metainfo.py  test_migration.py  test_mkdocs.py  test_normalizing.py  test_parsing.py  test_proc.py  test_processing.py  test_repo.py  test_search.py  test_test.py  test_uploads.py  test_user.py  test_utils.py  utils.py
tests_integration/: test_client.py
(+2765 files in other folders)
